# air-quality-monitor

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BOM.md  HARDWARE.md  WIRING.md
hardware/: README.md
scripts/: deploy.sh  install.sh  nest_alert.py  pi-healthcheck.sh  run-dev.sh
src/aqm/: __init__.py  config.py  models.py
src/aqm/collector/: service.py
src/aqm/display/: __main__.py  renderer.py
src/aqm/sensors/: __init__.py  base.py  bme680.py  mock.py  pms5003.py  scd41.py
src/aqm/storage/: db.py
src/aqm/web/: app.py
src/aqm/web/templates/: index.html
systemd/: aqm-collector.service  aqm-display.service  aqm-nest.service  aqm-web.service
tests/: test_storage.py
